sumo/tests/duarouter/alternatives/style1_input/errors/xml/missing_element_begin/errors.duarouter
Error: Missing id in route.
Quitting (on error).
